[package]
name = "identity_service"
version = "0.1.0"
edition = "2021"
default-run = "identity_service"
authors = ["Jonas Groenbek <jonasgroenbek@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
